--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="C:\Users\User\Desktop\Week-8-JQuery\styles.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
     <title>LiveCoding jQuery Assignment</title>
   </head>
   <body>
