--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 	    </form>
     </div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="app.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
