--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="/aydinlik23/Week-8-JQuery/blob/master/styles.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
     <title>LiveCoding jQuery Assignment</title>
   </head>
   <body>
